# Diasgnostico-pred

./: .env.example  .gitignore  Makefile  PROYECTO.md  README.md  README_demo.md  config.py  environment.yml  pyproject.toml
api/: esquemas.py  main.py
basic/: basic.prompt.md  config.py
basic/api/: config.py
basic/inferencia/: predictor.py
dashboard/: app.py
docs/: DOCUMENTATION_GUIDELINES.md  ROADMAP.md  ROADMAP_PARTE1.md  ROADMAP_PARTE2.md  copilot-instructions.md  evaluacion_academica.md
docs/implementacion_modelos/: .prompt.md  GUIA_UNIFICADA.md  README.md  arbol.md  gbm.md  kmeans.md  mlp.md  svm.md
docs/implementacion_modelos/modelos/: arbol-especifico.md  gbm-especifico.md  kmeans-especifico.md  mlp-especifico.md  svm-especifico.md
docs/implementacion_modelos/ref/: Gestion_del_Desbalance_en_Machine_Learning.md  Notas ia.md  Notas_Introduccion_IA.md  Perceptron_y_Redes_Neuronales.md  Redes_Neuronales_8bit_Edition.md  escalar_o_no_escalar (1).ipynb  gestion_desbalance.ipynb  notas_escalar_o_no_escalar.md  notas_gestion_desbalance.md  notas_svm_fraude.md  smv_fraude.ipynb
docs/referencia/: guidelines-dashboards.md
entrenamiento/: cargador_datos.py  comparador_modelos.py  descargador_dataset.py  evaluador.py  fenotipado.py  generador_reportes.py  optimizador.py  pipeline.py  preprocesador.py
notebooks/: 01_eda_regionalizado.ipynb  02_fenotipado_kmeans.ipynb
pruebas/: test_api.py  test_cargador.py  test_comparador.py  test_descargador_dataset.py  test_fenotipado.py  test_notebook_eda_regionalizado.py  test_optimizador.py  test_predictor.py  test_preprocesador.py
report-output/: README.md  metrics.csv  report.md  report.tex
report-output/deploy/: links.md
report-output/notebooks_processed/: 01_eda_regionalizado_extract.md  02_fenotipado_kmeans_extract.md
reportes/: benchmark_10000.json  benchmark_10000.md  benchmark_10000_manifest.json  benchmark_50000.json  benchmark_50000.md  benchmark_50000_manifest.json  benchmark_consolidado.md  comparativa_modelos.md  contraste_regional.md  generar_contraste_regional.py  hallazgos_eda.json  hallazgos_fenotipado.json  metricas_smoke400.json
resultados/: README.md
scripts/: ejecutar_corridas.py  generar_contraste_regional.py  generar_muestra_2000.py  generar_reporte_legible.py  generar_shap.py  run_minima.ps1
