[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "diabetes-ia-mx"
version = "0.1.0"
description = "Sistema base de diagnóstico de riesgo de diabetes con FastAPI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.112.0",
  "uvicorn>=0.30.0",
  "pandas>=2.2.0",
  "pydantic>=2.8.0",
  "joblib>=1.4.0",
  "scikit-learn>=1.5.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "httpx>=0.27.0",
]

[tool.pytest.ini_options]
testpaths = ["pruebas"]
addopts = "-q"

[tool.setuptools]
py-modules = ["config"]

[tool.setuptools.packages.find]
include = ["api*", "entrenamiento*", "inferencia*"]
