[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Diasgnostico-pred"
version = "0.1.0"
description = "Sistema base de diagnóstico de riesgo de diabetes con FastAPI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.112.0",
  "uvicorn>=0.30.0",
  "pandas>=2.2.0",
  "scipy>=1.13.0",
  "seaborn>=0.13.2",
  "ipython>=8.26.0",
  "pydantic>=2.8.0",
  "joblib>=1.4.0",
  "scikit-learn>=1.5.0",
  "jinja2>=3.1.0",
  "ucimlrepo>=0.0.3",
  "matplotlib>=3.9.0",
  "pyarrow>=17.0.0",
  "imbalanced-learn>=0.12.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "httpx>=0.27.0",
  "nbconvert>=7.0.0",
  "nbformat>=5.9.0",
  "ipykernel>=6.29.0",
  "shap>=0.51.0",
]
dashboard = [
  "streamlit>=1.35.0",
]

[tool.pytest.ini_options]
testpaths = ["pruebas"]
addopts = "-q"

[tool.setuptools]
py-modules = ["config"]

[tool.setuptools.packages.find]
include = ["api*", "entrenamiento*", "inferencia*"]
